[package]
name = "js-object"
version = "0.2.0"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "A macro for creating JavaScript objects"
homepage = "https://github.com/That3Percent/js-object"
repository = "https://github.com/That3Percent/js-object"
readme = "README.md"
keywords = ["javascript",  "wasm-bindgen"]
categories = ["caching", "wasm", "web-programming"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
wasm-bindgen = "0.2.40"
js-sys = "0.3.11"

[dependencies.js-intern]
version = "0.3.0"